--- a/index-en.html
+++ b/index-en.html
@@ -883,16 +883,24 @@
           <p class="mb-0" style="color:#222;">Estoy aquí para ayudarte, no dudes en dejarme un mensaje.</p>
         </div>
         <div class="col-lg-6 px-5" data-aos="fade-left">
-          <form class="w-100" action="https://app.formbricks.com/s/cme98uzn2lb7lvz01gqqnue33" method="POST" data-aos="fade-left">
+          <form id="contactForm" class="w-100" data-aos="fade-left">
             <label for="nombre" class="visually-hidden">Name</label>
             <input type="text" id="nombre" name="nombre" class="form-control mb-3" placeholder="your name" style="height:50px;" required>
             <label for="email" class="visually-hidden">Email</label>
             <input type="email" id="email" name="email" class="form-control mb-3" placeholder="your email" style="height:50px;" required>
             <label for="mensaje" class="visually-hidden">Message</label>
             <textarea id="mensaje" name="mensaje" class="form-control mb-3" rows="4" placeholder="your message" style="height:100px;" required></textarea>
-            <button type="submit" class="btn w-100"
-              style="background:#232427;color:#fff;font-weight:600;font-size:1.2rem;border-radius:15px;height:48px;">SEND</button>
+            <button type="submit" id="submitBtn" class="btn w-100"
+              style="background:#232427;color:#fff;font-weight:600;font-size:1.2rem;border-radius:15px;height:48px;">
+              <span id="submitText">SEND</span>
+              <span id="submitLoader" class="d-none">
+                <i class="bi bi-arrow-clockwise spin-animation me-2"></i>Sending...
+              </span>
+            </button>
           </form>
+          
+          <!-- Status messages -->
+          <div id="formMessages" class="mt-3"></div>
         </div>
       </div>
     </div>
@@ -977,6 +985,7 @@
 
   <script defer src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
   <script defer src="js/script-simple.js"></script>
+  <script defer src="js/contact-form-en.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   <script defer>
     document.addEventListener('DOMContentLoaded', function() {
