feat: añadir protección contra envíos accidentales en formularios

--- a/index-en.html
+++ b/index-en.html
@@ -969,6 +969,7 @@
   </footer>
 
   <!-- Bootstrap JavaScript Libraries -->
+  <script src="js/anti-formbricks.js"></script> <!-- Protection against accidental form submissions -->
   <script defer src="js/jquery-1.11.0.min.js"></script> <!-- jquery file-->
 
   <script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
