feat: actualizar título de desarrollador a Fullstack y corregir enlace de LinkedIn

--- a/index-en.html
+++ b/index-en.html
@@ -198,7 +198,7 @@
           <div class="text-content text-white py-3 py-md-5 my-3 my-md-5" data-aos="fade-right" id="hero">
             <p class="greeting fs-6 text-light mb-2">Hi! I'm</p>
             <h1 class="hero-title display-3 display-md-1">Daniel <br> Fuelpaz</h1>
-            <p class="hero-subtitle fs-5 fs-md-4 mt-3">Frontend Developer</p>
+            <p class="hero-subtitle fs-5 fs-md-4 mt-3">Fullstack Developer</p>
             <p class="location-text mt-2">Ambato, Tungurahua</p>
           </div>
         </div>
@@ -284,7 +284,7 @@
         </div>
 
         <!-- Consultoría -->
-        <div class="bento-item bento-small" data-aos="fade-left" data-aos-delay="400">
+        <!-- <div class="bento-item bento-small" data-aos="fade-left" data-aos-delay="400">
           <div class="bento-content text-center">
             <div class="icon-wrapper mb-2">
               <i class="bi bi-lightbulb" style="font-size: 2rem; color: #e17055;"></i>
@@ -292,7 +292,7 @@
             <h6 class="fw-semibold mb-1">Consulting</h6>
             <p class="text-muted small mb-0">Technical advisory</p>
           </div>
-        </div>
+        </div> -->
       </div>
 
       <!-- Perfil Profesional -->
@@ -920,7 +920,7 @@
                   class="bi bi-github fs-4" aria-hidden="true"></i></a>
               <a href="https://www.instagram.com/daniel.fuelpaz/" target="_blank" aria-label="Instagram de Daniel Fuelpaz" title="Instagram"><i
                   class="bi bi-instagram fs-4" aria-hidden="true"></i></a>
-              <a href="https://www.linkedin.com/in/daniel-fuelpaz-29a363157/" target="_blank" aria-label="LinkedIn de Daniel Fuelpaz" title="LinkedIn"><i
+              <a href="https://www.linkedin.com/in/daniel-fuelpaz/" target="_blank" aria-label="LinkedIn de Daniel Fuelpaz" title="LinkedIn"><i
                   class="bi bi-linkedin fs-4" aria-hidden="true"></i></a>
             </div>
           </div>
