--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     "image": "https://danielfuelpaz.com/images/DGLOGONEW.png",
     "sameAs": [
       "https://github.com/D4rkGh057",
-      "https://linkedin.com/in/danielfuelpaz"
+      "https://linkedin.com/in/daniel-fuelpaz"
     ],
     "address": {
       "@type": "PostalAddress",
@@ -198,7 +198,7 @@
           <div class="text-content text-white py-3 py-md-5 my-3 my-md-5" data-aos="fade-right" id="hero">
             <p class="greeting fs-6 text-light mb-2">¡Hola! Soy</p>
             <h1 class="hero-title display-3 display-md-1">Daniel <br> Fuelpaz</h1>
-            <p class="hero-subtitle text-white fs-5 fs-md-4 mt-3">Desarrollador Frontend</p>
+            <p class="hero-subtitle text-white fs-5 fs-md-4 mt-3">Desarrollador Fullstack</p>
             <p class="location-text mt-2">Ambato, Tungurahua</p>
           </div>
         </div>
@@ -283,7 +283,7 @@
           </div>
         </div>
 
-        <!-- Consultoría -->
+        <!-- Consultoría
         <div class="bento-item bento-small" data-aos="fade-left" data-aos-delay="400">
           <div class="bento-content text-center">
             <div class="icon-wrapper mb-2">
@@ -292,7 +292,7 @@
             <h6 class="fw-semibold mb-1">Consultoría</h6>
             <p class="text-muted small mb-0">Asesoría técnica</p>
           </div>
-        </div>
+        </div> -->
       </div>
 
       <!-- Perfil Profesional -->
@@ -920,7 +920,7 @@
                   class="bi bi-github fs-4" aria-hidden="true"></i></a>
               <a href="https://www.instagram.com/daniel.fuelpaz/" target="_blank" aria-label="Instagram de Daniel Fuelpaz" title="Instagram"><i
                   class="bi bi-instagram fs-4" aria-hidden="true"></i></a>
-              <a href="https://www.linkedin.com/in/daniel-fuelpaz-29a363157/" target="_blank" aria-label="LinkedIn de Daniel Fuelpaz" title="LinkedIn"><i
+              <a href="https://www.linkedin.com/in/daniel-fuelpaz/" target="_blank" aria-label="LinkedIn de Daniel Fuelpaz" title="LinkedIn"><i
                   class="bi bi-linkedin fs-4" aria-hidden="true"></i></a>
             </div>
           </div>
