Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             
             <div class="exp-tech">
               <img height="20" width="20" src="https://cdn.jsdelivr.net/npm/simple-icons@v15/icons/arcgis.svg" alt="ArcGIS" />
-              <img height="20" width="20" src="images/powerapps-icon.png" alt="PowerApps" />
+              <img height="20" width="20" src="images/powerappsicon.png" alt="PowerApps" />
               <img height="20" width="20" src="https://cdn.jsdelivr.net/npm/simple-icons@v15/icons/react.svg" alt="React" />
               <img height="20" width="20" src="https://cdn.jsdelivr.net/npm/simple-icons@v15/icons/nestjs.svg" alt="NestJS" />
               <img height="20" width="20" src="https://cdn.jsdelivr.net/npm/simple-icons@v15/icons/typescript.svg" alt="TypeScript" />
@@ -580,9 +580,11 @@
               </div>
             </div>
             
-            <a href="https://github.com/D4rkGh057" target="_blank" class="github-link">
+            <a href="https://github.com/D4rkGh057" target="_blank" class="github-link" 
+               title="Ver mis proyectos en GitHub" aria-label="Ver perfil de GitHub">
               <i class="bi bi-github me-2"></i>
-              Ver GitHub
+              <span>Ver GitHub</span>
+              <i class="bi bi-arrow-up-right ms-1" style="font-size: 0.8rem;"></i>
             </a>
           </div>
         </div>
@@ -623,10 +625,12 @@
                   <li>Establecí flujos de trabajo DevOps básicos que optimizaron los ciclos de desarrollo y despliegue.
                   </li>
                 </ul>
-                <a href="https://github.com/D4rkGh057" target="_blank" class="btn btn-github btn-sm">
-                  <img height="18" width="18" src="https://cdn.jsdelivr.net/npm/simple-icons@v15/icons/github.svg"
+                <a href="https://github.com/D4rkGh057" target="_blank" class="btn btn-github" 
+                   title="Ver mis proyectos en GitHub" aria-label="Ver perfil de GitHub">
+                  <img height="20" width="20" src="https://cdn.jsdelivr.net/npm/simple-icons@v15/icons/github.svg"
                     alt="GitHub" title="GitHub" />
-                  Ver GitHub
+                  <span>Ver GitHub</span>
+                  <i class="bi bi-arrow-up-right ms-1" style="font-size: 0.75rem;"></i>
                 </a>
               </div>
             </div>
@@ -959,10 +963,6 @@
           <p>
             ¿Te gustaría colaborar conmigo o tienes alguna consulta? ¡Contáctame!
           </p>
-          <h3>
-            <a href="mailto:danielfuelpaz@outlook.com"
-              class="text-white text-decoration-none">danielfuelpaz@outlook.com</a>
-          </h3>
         </div>
       </div>
     </div>
